--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REBECCA---2B/title>
         <link rel="stylesheet" href="">
+        <header class="cabecario">
+
+
+        </header>
 </head>
 <body>
 </body>
