--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REBECCA---2B/title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css>
         <header class="cabecario">
-
-
         </header>
 </head>
 <body>
-    <h1>vai ter uma imagem aqui</h1>
-    
+    <h1>vai ser uma imagem aqui</h1>
 </body>
 </html>
