--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 
 <body>
     <h1>vai ser uma imagem aqui</h1>
+    <ul>
+        <li>escola</li>
+        <li>estudante</li>
+    </ul>
 </body>
 </html>
