--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>REBECCA---2B/title>
         <link rel="stylesheet" href="style.css>
 </head>
-
 <body>
+    <header>
+        <img classe="cabecalho imagem" scr="img/lojaalura.png" ALT=""lojaalura">
     <h1>vai ser uma imagem aqui</h1>
     <ul>
         <li>escola</li>
