--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img classe="cabecalho imagem" scr="img/lojaalura.png" ALT=""lojaalura">
+        <img classe="cabecalho imagem" scr="img/logoalura987"="logoalura987">
     <h1>vai ser uma imagem aqui</h1>
     <ul>
         <li>escola</li>
