--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REBECCA---2B/title>
+    <title>REBECCA---2B</title>
         <link rel="stylesheet" href="style.css>
 </head>
 <body>
     <header>
         <img classe="cabecalho imagem" scr="img/logoalura987"="logoalura987">
-    <h1>vai ser uma imagem aqui</h1>
     <ul>
         <li>escola</li>
         <li>estudante</li>
