--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <link rel="stylesheet" href="style.css>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img classe="cabecalho imagem" scr="img/logoalura987"="logoalura987">
-    <ul>
-        <li>escola</li>
-        <li>estudante</li>
+    <ul class="cabecalho-lista" 
+        <li class="cabecario-lista-item">escola</li>
+        <LI class="cabecario-lista-item">estudante</LI/LI>
     </ul>
 </body>
 </html>
