--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img classe="cabecalho imagem" scr="img/logoalura987"="logoalura987">
+       <img class="cabecario-imagem" src="IMG/logoalura987" alt="logoalura">
     <ul class="cabecalho-lista" 
         <li class="cabecario-lista-item">escola</li>
         <LI class="cabecario-lista-item">estudante</LI/LI>
