--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header class="cabecalho">
-       <img class="cabecario-imagem" src="IMG/logoalura987" alt="logoalura">
+       <img class="cabecalho-imagem" src="IMG/logoalura987" alt="logoalura">
     <ul class="cabecalho-lista" 
-        <li class="cabecario-lista-item">escola</li>
-        <LI class="cabecario-lista-item">estudante</LI/LI>
+        <li class="cabecalho-lista-item">escola</li>
+        <LI class="cabecalho-lista-item">estudante</LI/LI>
     </ul>
 </body>
 </html>
