--- a/index.html
+++ b/index.html
@@ -13,5 +13,4 @@
         <li class="cabecalho-lista-item">escola</li>
         <LI class="cabecalho-lista-item">estudante</LI/LI>
     </ul>
-</body>
-</html>
+</header>
