--- a/index.html
+++ b/index.html
@@ -13,4 +13,9 @@
         <li class="cabecalho-lista-item">escola</li>
         <LI class="cabecalho-lista-item">estudante</LI/LI>
     </ul>
+        
+    </body>
 </header>
+    </html>
+
+
