--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REBECCA---2B</title>
-        <link rel="stylesheet" href="style.css>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabecalho">
+    <header>
        <img class="cabecalho-imagem" src="IMG/logoalura987" alt="logoalura">
-    <ul class="cabecalho-lista" 
-        <li class="cabecalho-lista-item">escola</li>
-        <LI class="cabecalho-lista-item">estudante</LI/LI>
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">Escola</li>
+        <LI class="cabecalho-lista-item">Estudante</LI/LI>
     </ul>
+</header>
         
     </body>
-</header>
     </html>
 
 
