--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <LI class="cabecalho-lista-item">Estudante</LI/LI>
     </ul>
 </header>
-        
+        <SEction class="Escola">
+            <H2 class="escola-titulo">Sobre a escola</H2>
+            <p class="escola-texto-um"></p>
+            <p class="escola-texto-dois"></p>
+        </SEction>
     </body>
     </html>
 
