--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </header>
         <SEction class="Escola">
             <H2 class="escola-titulo">Sobre a escola</H2>
-            <p class="escola-texto-um"></p>
-            <p class="escola-texto-dois"></p>
+            <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
+            <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
         </SEction>
     </body>
     </html>
