--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="<a href="https://www.figma.com/design/K2oiFmlPkRqtSIcvbi8Pg5/Prot%C3%B3tipo-site-(Copy)?node-id=1-66&t=Wmti3CVgfGBSPz7P-4" alt="foto da thais">
+            <img class="estudante-imagem" src="Home run-pana.png" alt="foto da thais">
             <h3 class="estudante-nome">Thais</h3>
             <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
