--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Home run-pana.png" alt="foto do marcelo">
-            <h3 class="estudante-nome">Gabriela</h3>
+            <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="IMG/instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Home run-pana.png" alt="foto do marcelo">
-            <h3 class="estudante-nome">Vitoria</h3>
+            <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="IMG/instagram.png" alt="icone instagram"></a>
@@ -94,7 +94,7 @@
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+        <img class="rodape-imagem"src="<alurastart logo.png>" alt="logo da alura start">
     </footer>
 </body>
 </html>
