--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="<im>" alt="logo da alura start"/>
+        <img class="rodape-imagem" src="IMG/LOGOALURA.png" alt="logo da alura start"/>
     </footer>
 </body>
 </html>
