--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="IMG/instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src=<"Home run-pana.png" alt="foto do Marcelo">
+            <img class="estudante-imagem" src="IMG/Home run-pana.png" alt="foto do Marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
