--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Home run-pana.png" alt="foto do marcelo">
+            <img class="estudante-imagem" src="IMG/Home run-pana.png" alt="foto do marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="IMG/instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Home run-pana.png" alt="foto do marcelo">
+            <img class="estudante-imagem" src="IMG/Home run-pana.png" alt="foto do marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="IMG/instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Home run-pana.png" alt="foto do marcelo">
+            <img class="estudante-imagem" src="IMG/Home run-pana.png" alt="foto do marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
@@ -54,21 +54,21 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Home run-pana.png" alt="foto do Marcelo">
+            <img class="estudante-imagem" src="IMG/Home run-pana.png" alt="foto do Marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="IMG/instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Home run-pana.png" alt="foto do Marcelo">
+            <img class="estudante-imagem" src="IMG/Home run-pana.png" alt="foto do Marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="IMG/instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Home run-pana.png" alt="foto do Marcelo">
+            <img class="estudante-imagem" src="IMG/Home run-pana.png" alt="foto do Marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
             <img class="estudante-icone" src="IMG/github.png" alt="icone github">
             <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
@@ -77,7 +77,7 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Home run-pana.png" alt="foto do Marcelo">
+            <img class="estudante-imagem" src="IMG/Home run-pana.png" alt="foto do Marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
             <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="IMG/github.png" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="IMG/linkedin.png" alt="icone linkedin"></a>
